[WGSL] api,operation,compute_pipeline,overrides:computed:* does not pass https://bugs.webkit.org/show_bug.cgi?id=275010 rdar://129090786

Reviewed by Mike Wyrzykowski.

Add support for override expressions, including:
- Add support for evaluating calls, binary and unary expressions, member and index access
  to the current evaluator
- Move the logic for evaluating and mangling names of overrides into WGSL instead of
  duplicating it across the WebGPU API and wgslc
- Fix the order in which overrides are evaluated: previously they were evaluated in the
  order they were marked used, but it should be in the order that they are defined (since
  that is already ordered by the compiler so that uses come after defs)

* LayoutTests/http/tests/webgpu/webgpu/api/operation/compute_pipeline/overrides-expected.txt:
* Source/WebGPU/WGSL/AST/ASTBinaryExpression.h:
(WGSL::AST::BinaryExpression::leftExpression const):
(WGSL::AST::BinaryExpression::rightExpression const):
* Source/WebGPU/WGSL/AST/ASTUnaryExpression.h:
* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::zeroValue):
(WGSL::constantUnaryOperation):
(WGSL::constantBinaryOperation):
(WGSL::constantTernaryOperation):
(WGSL::convertValue):
(WGSL::constantConstructor):
(WGSL::scalarOrVector):
(WGSL::constantVector):
(WGSL::constantMatrix):
(WGSL::containsZero):
* Source/WebGPU/WGSL/TypeCheck.cpp:
* Source/WebGPU/WGSL/WGSL.cpp:
(WGSL::evaluate):
* Source/WebGPU/WGSL/WGSL.h:
* Source/WebGPU/WGSL/WGSLShaderModule.cpp:
(WGSL::ShaderModule::validateOverrides):
(WGSL::ShaderModule::initializeOverloads):
(WGSL::ShaderModule::lookupOverload):
* Source/WebGPU/WGSL/WGSLShaderModule.h:
(WGSL::ShaderModule::ShaderModule):
* Source/WebGPU/WGSL/generator/main.rb:
* Source/WebGPU/WGSL/wgslc.cpp:
(runWGSL):
* Source/WebGPU/WebGPU.xcodeproj/project.pbxproj:
* Source/WebGPU/WebGPU/ComputePipeline.mm:
(WebGPU::metalSize):
* Source/WebGPU/WebGPU/Pipeline.mm:
(WebGPU::createLibrary):

Canonical link: https://commits.webkit.org/306328@main