Tools/TestWebKitAPI/Tests/WGSL/TestWGSLAPI.h
@@ -136,16 +136,6 @@ inline Variant<String, WGSL::Error> generate(const WGSL::SuccessfulCheck& static
 {
     auto& shaderModule = staticCheckResult.ast;
     HashMap<String, WGSL::ConstantValue> constantValues;
-    for (auto& entryPoint : shaderModule->callGraph().entrypoints()) {
-        const auto& entryPointInformation = prepareResult.entryPoints.get(entryPoint.originalName);
-        for (const auto& [originalName, constant] : entryPointInformation.specializationConstants) {
-            EXPECT_TRUE(constant.defaultValue);
-            auto defaultValue = WGSL::evaluate(*constant.defaultValue, constantValues);
-            EXPECT_TRUE(defaultValue.has_value());
-            constantValues.add(constant.mangledName, *defaultValue);
-        }
-    }
-
     return WGSL::generate(shaderModule, prepareResult, constantValues, { });
 }
 
